# acp_demo

./: CLAUDE.md  README.md  pyproject.toml  test_interactive_review.py
references/: ACP_ANALYSIS.md
src/email_classifier_crew/: __init__.py  acp_server.py  crew.py  main.py  tools.py
src/email_classifier_crew/config/: agents.yaml  tasks.yaml
src/orchestrator/: __init__.py  acp_client.py  human_review.py  main.py  models.py  workflow.py
src/response_generator/: __init__.py  acp_server.py  generator.py  main.py  models.py
src/strategy_agent/: __init__.py  acp_server.py  main.py  models.py  workflow.py
